Builds/buildsets endpoint: Do not aggregate data anymore, fixes
The endpoints differentiate finished builds/buildsets and running
or queued ones. This is to improve performance, as querying builds
in progress is only needed for stopping a build.

Jobs endpoint: fix jobs not being correctly sorted by last run,
or last builds not being sorted by last run either.
